--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html>
 <head>
 	<title>Shaan's Website</title>
+	<style>
+		body {
+			body {
+  background-image: url("https://cdn.pixabay.com/photo/2017/06/16/07/27/under-construction-2408066_960_720.png");
+  background-repeat: no-repeat;
+}
+		}
+	</style>
 </head>
 <body>
-<p>Under Construction! See you in a while</p>
+
 </body>
 </html>
