--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
 	<title>Shaan's Website</title>
 	<style>
 		body {
-			body {
-  background-image: url("https://cdn.pixabay.com/photo/2017/06/16/07/27/under-construction-2408066_960_720.png");
-  background-repeat: no-repeat;
-}
+			text-align: center;
 		}
 	</style>
 </head>
 <body>
+	<img src="https://cdn.pixabay.com/photo/2017/06/16/07/27/under-construction-2408066_960_720.png">
 
 </body>
 </html>
